prevent footer from overlapping main content

--- a/source/assets/stylesheets/app/_footer.sass
+++ b/source/assets/stylesheets/app/_footer.sass
@@ -6,6 +6,7 @@
   right: 0
   bottom: 0
   height: $footer-height
+  padding: 1rem
   background-color: #111
   color: white
   text-align: center
